Closed Bug 1740897 Opened 3 years ago Closed 3 years ago

[X11] There's a flickering when popup widget is used for D&D

Categories

(Core :: Widget: Gtk, defect, P3)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: stransky, Assigned: stransky)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

Follow up from https://bugzilla.mozilla.org/show_bug.cgi?id=1738482#c14
[X11] There's a flickering when popup widget is used for D&D

Assignee: nobody → stransky
Status: NEW → ASSIGNED
Pushed by stransky@redhat.com:
https://hg.mozilla.org/integration/autoland/rev/ccb47922815f
[X11] Make parent container of D&D popup transparent to avoid flickering, r=emilio
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: