Bug 1740897 [X11] Make parent container of D&D popup transparent to avoid flickering, r=emilio

Differential Revision: https://phabricator.services.mozilla.com/D131252